--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "synth-music",
   "version": "1.0.0",
   "description": "later",
-  "main": "index.js",
+  "main": "synth.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ZenixCodez/Discord-MusicBot#readme",
   "dependencies": {
     "chalk": "^5.3.0",
-    "discord.js": "^14.13.0"
+    "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1"
   }
 }
