--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "chalk": "^5.3.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "riffy": "^1.0.5-beta"
+    "magmastream": "^2.2.3"
   }
 }
